--- a/photoPicker/photoPicker-Info.plist
+++ b/photoPicker/photoPicker-Info.plist
@@ -25,9 +25,9 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIMainStoryboardFile</key>
-	<string>Storyboard</string>
+	<string>photoPicker_iPhone</string>
 	<key>UIMainStoryboardFile~ipad</key>
-	<string>Storyboard</string>
+	<string>photoPicker_iPad</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
